log
Thu 07 Sep 2023 07:21:32 PM UTC: 
 tests:  0|6
total_score: 0/70
c716bce
Thu 07 Sep 2023 07:32:44 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘hashmap’; did you mean ‘HashMap’?
   55 |   hashmap mapa = (hashmap*) malloc(sizeof(hasmap))
      |   ^~~~~~~
      |   HashMap
hashmap.c:55:19: error: ‘hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   55 |   hashmap mapa = (hashmap*) malloc(sizeof(hasmap))
      |                   ^~~~~~~
      |                   HashMap
hashmap.c:55:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:27: error: expected expression before ‘)’ token
   55 |   hashmap mapa = (hashmap*) malloc(sizeof(hasmap))
      |                           ^
hashmap.c:58:7: error: invalid type argument of ‘->’ (have ‘int’)
   58 |   mapa->size = NULL;
      |       ^~
hashmap.c:59:7: error: invalid type argument of ‘->’ (have ‘int’)
   59 |   mapa->capacity = capacity;
      |       ^~
hashmap.c:60:7: error: invalid type argument of ‘->’ (have ‘int’)
   60 |   mapa->current = NULL;
      |       ^~
Compilation failed
05ad7dd
Thu 07 Sep 2023 07:33:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:18: error: invalid initializer
   55 |   HashMap mapa = (HashMap*) malloc(sizeof(HashMap))
      |                  ^
hashmap.c:57:3: error: expected ‘,’ or ‘;’ before ‘mapa’
   57 |   mapa->buckets = NULL;
      |   ^~~~
hashmap.c:58:7: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   58 |   mapa->size = NULL;
      |       ^~
hashmap.c:59:7: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   59 |   mapa->capacity = capacity;
      |       ^~
hashmap.c:60:7: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   60 |   mapa->current = NULL;
      |       ^~
Compilation failed
c3305b4
Thu 07 Sep 2023 07:33:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:3: error: expected ‘,’ or ‘;’ before ‘mapa’
   57 |   mapa->buckets = NULL;
      |   ^~~~
hashmap.c:58:14: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   58 |   mapa->size = NULL;
      |              ^
hashmap.c:60:17: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   60 |   mapa->current = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
fef14a7
Thu 07 Sep 2023 07:34:09 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:3: error: expected ‘,’ or ‘;’ before ‘mapa’
   57 |   mapa->buckets = NULL;
      |   ^~~~
Compilation failed
ab154df
Thu 07 Sep 2023 07:34:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d70783d
Thu 07 Sep 2023 07:34:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
862b132
Thu 07 Sep 2023 07:35:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:10: error: incompatible types when returning type ‘HashMap’ {aka ‘struct HashMap’} but ‘HashMap *’ {aka ‘struct HashMap *’} was expected
   62 |   return *mapa;
      |          ^~~~~
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
48a1a52
Thu 07 Sep 2023 07:35:28 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:19: error: expected expression before ‘[’ token
   57 |   mapa->buckets = [NULL][NULL];
      |                   ^
Compilation failed
0160e98
Thu 07 Sep 2023 07:35:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dfcccf9
Thu 07 Sep 2023 07:36:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:19: error: dereferencing ‘void *’ pointer [-Werror]
   57 |   mapa->buckets = *NULL;
      |                   ^
hashmap.c:57:17: error: void value not ignored as it ought to be
   57 |   mapa->buckets = *NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
1af4a3f
Thu 07 Sep 2023 07:37:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
090e03c
Thu 07 Sep 2023 07:37:39 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51d7383
Thu 07 Sep 2023 07:38:48 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:19: error: expected expression before ‘;’ token
   57 |   mapa->buckets = ;
      |                   ^
Compilation failed
576c67a
Thu 07 Sep 2023 07:40:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:20: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   57 |   mapa->buckets = (pair*)calloc(capacity, sizeof(pair*));
      |                    ^~~~
      |                    Pair
hashmap.c:57:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:57:25: error: expected expression before ‘)’ token
   57 |   mapa->buckets = (pair*)calloc(capacity, sizeof(pair*));
      |                         ^
Compilation failed
ac8a7ff
Thu 07 Sep 2023 07:40:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:20: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   57 |   mapa->buckets = (pair*)calloc(capacity, sizeof(Pair*));
      |                    ^~~~
      |                    Pair
hashmap.c:57:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:57:25: error: expected expression before ‘)’ token
   57 |   mapa->buckets = (pair*)calloc(capacity, sizeof(Pair*));
      |                         ^
Compilation failed
3c52189
Thu 07 Sep 2023 07:40:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |   mapa->buckets = (Pair*)calloc(capacity, sizeof(Pair*));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
4f12e43
Thu 07 Sep 2023 07:40:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4bde390
Thu 07 Sep 2023 07:47:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘posicion’ [-Werror=unused-variable]
   43 |   long posicion = hash(key,map->capacity);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d0b1970
